--- a/index.html
+++ b/index.html
@@ -72,19 +72,19 @@
                                                 <li>
                                                         <a href="https://mail.lokyshin.net">
                                                           <i class="fas fa-envelope"></i> 
-                                                          Lokyshin.net邮箱
-                                                        </a>
-                                                </li>
-                                                <li>
-                                                        <a href="https://pdf.lokyshin.net">
-                                                          <i class="fas fa-file-pdf"></i> 
-                                                          Stirling PDF
+                                                          &nbsp;&nbsp;Lokyshin.net邮箱
                                                         </a>
                                                 </li>
                                                 <li>
                                                         <a href="https://chat.lokyshin.net">
                                                           <i class="fas fa-comments"></i> 
-                                                          ChatGPT
+                                                          &nbsp;&nbsp;ChatGPT
+                                                        </a>
+                                                </li>
+                                                <li>
+                                                        <a href="https://pdf.lokyshin.net">
+                                                          <i class="fas fa-file-pdf"></i> 
+                                                          &nbsp;&nbsp;Stirling PDF
                                                         </a>
                                                 </li>
                                         </ul>
@@ -104,25 +104,25 @@
                                                 <li>
                                                         <a href="https://pysurtool.lokyshin.net">
                                                           <i class="fa-solid fa-chart-column"></i> 
-                                                          Python生存分析与统计工具
+                                                          &nbsp;&nbsp;Python生存分析与统计工具
                                                         </a>
                                                 </li>
                                                 <li>
                                                         <a href="https://survcox.lokyshin.net">
                                                           <i class="fa-solid fa-r"></i> 
-                                                          R语言生存分析工具
+                                                          &nbsp;&nbsp;R语言生存分析工具
                                                         </a>
                                                 </li>
                                                 <li>
                                                         <a href="https://jupyter.lokyshin.net">
                                                           <i class="fa-brands fa-python"></i> 
-                                                          JupyterLab
+                                                          &nbsp;&nbsp;JupyterLab
                                                         </a>
                                                 </li>
                                                 <li>
                                                         <a href="https://r.lokyshin.net">
                                                           <i class="fa-solid fa-registered"></i> 
-                                                          R Studio
+                                                          &nbsp;&nbsp;R Studio
                                                         </a>
                                                 </li>
                                         </ul>
@@ -142,37 +142,37 @@
                                                 <li>
                                                         <a href="https://ssh.lokyshin.net">
                                                           <i class="fa-solid fa-terminal"></i> 
-                                                          SSH服务
+                                                          &nbsp;&nbsp;SSH服务
                                                         </a>
                                                 </li>
                                                 <li>
                                                         <a href="https://docker.lokyshin.net">
                                                           <i class="fa-brands fa-docker"></i> 
-                                                          Docker服务
+                                                          &nbsp;&nbsp;Docker服务
                                                         </a>
                                                 </li>
                                                 <li>
                                                         <a href="https://transfer.lokyshin.net">
                                                           <i class="fa-solid fa-download"></i> 
-                                                          文件传递
+                                                          &nbsp;&nbsp;文件传递
                                                         </a>
                                                 </li>
                                                 <li>
                                                         <a href="https://lkschatbot.lokyshin.net">
                                                           <i class="fa-brands fa-weixin"></i> 
-                                                          微信服务
+                                                          &nbsp;&nbsp;微信服务
                                                         </a>
                                                 </li>
                                                 <li>
                                                         <a href="https://find.lokyshin.net">
                                                           <i class="fa-solid fa-network-wired"></i> 
-                                                          网络接入
+                                                          &nbsp;&nbsp;网络接入
                                                         </a>
                                                 </li>
                                                 <li>
                                                         <a href="https://socks.lokyshin.net">
                                                           <i class="fa-solid fa-rocket"></i> 
-                                                          Socks服务
+                                                          &nbsp;&nbsp;Socks服务
                                                         </a>
                                                 </li>
                                         </ul>
