--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                                         <ul style="list-style-type: none;">
                                                 <li>
                                                         <a href="https://mail.lokyshin.net">
-                                                          <i class="fas fa-envelope"></i> 
+                                                          <i class="fa-solid fa-inbox"></i> 
                                                           &nbsp;&nbsp;Lokyshin.net邮箱
                                                         </a>
                                                 </li>
