--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                                                 </li>
                                                 <li>
                                                         <a href="https://socks.lokyshin.net">
-                                                          <i class="fa-solid fa-rocket"></i> 
+                                                          <i class="fa-solid fa-ethernet"></i> 
                                                           &nbsp;&nbsp;Socks服务
                                                         </a>
                                                 </li>
