--- a/index.html
+++ b/index.html
@@ -199,7 +199,10 @@
                    
 <div class="content is-small has-text-centered">
   <br>
-  <p><a href="https://lokyshin.net">Lokyshin.net</a></p>
+  <p><a href="https://lokyshin.net">
+    <i class="fa-solid fa-earth-asia"></i> 
+    &nbsp;&nbsp;Lokyshin.net
+  </a></p>
   <br>
 </div>  
         
