--- a/index.html
+++ b/index.html
@@ -53,19 +53,19 @@
                                     <div class="content">
                                         <ul style="list-style-type: none;">
                                                 <li>
-                                                        <a href="https://mail.lokyshin.net">
+                                                        <a href="https://mail.lokyshin.net" target="_blank">
                                                           <i class="fa-solid fa-inbox"></i> 
                                                           &nbsp;&nbsp;Lokyshin.net邮箱
                                                         </a>
                                                 </li>
                                                 <li>
-                                                        <a href="https://pdf.lokyshin.net">
+                                                        <a href="https://pdf.lokyshin.net" target="_blank">
                                                           <i class="fas fa-file-pdf"></i> 
                                                           &nbsp;&nbsp;Lokyshin's PDF
                                                         </a>
                                                 </li>
                                                 <li>
-                                                        <a href="https://chat.lokyshin.net">
+                                                        <a href="https://chat.lokyshin.net" target="_blank">
                                                           <i class="fa-brands fa-rocketchat"></i> 
                                                           &nbsp;&nbsp;ChatGPT
                                                         </a>
@@ -88,25 +88,25 @@
                                     <div class="content">
                                         <ul style="list-style-type: none;">
                                                 <li>
-                                                        <a href="https://pysurtool.lokyshin.net">
+                                                        <a href="https://pysurtool.lokyshin.net" target="_blank">
                                                           <i class="fa-solid fa-chart-column"></i> 
                                                           &nbsp;&nbsp;Python生存分析与统计工具
                                                         </a>
                                                 </li>
                                                 <li>
-                                                        <a href="https://survcox.lokyshin.net">
+                                                        <a href="https://survcox.lokyshin.net" target="_blank">
                                                           <i class="fa-solid fa-chart-gantt"></i> 
                                                           &nbsp;&nbsp;R语言生存分析工具
                                                         </a>
                                                 </li>
                                                 <li>
-                                                        <a href="https://jupyter.lokyshin.net">
+                                                        <a href="https://jupyter.lokyshin.net" target="_blank">
                                                           <i class="fa-brands fa-python"></i> 
                                                           &nbsp;&nbsp;JupyterLab
                                                         </a>
                                                 </li>
                                                 <li>
-                                                        <a href="https://r.lokyshin.net">
+                                                        <a href="https://r.lokyshin.net" target="_blank">
                                                           <i class="fa-solid fa-registered"></i> 
                                                           &nbsp;&nbsp;R Studio
                                                         </a>
@@ -129,37 +129,37 @@
                                     <div class="content">
                                         <ul style="list-style-type: none;">
                                                 <li>
-                                                        <a href="https://ssh.lokyshin.net">
+                                                        <a href="https://ssh.lokyshin.net" target="_blank">
                                                           <i class="fa-solid fa-terminal"></i> 
                                                           &nbsp;&nbsp;SSH服务
                                                         </a>
                                                 </li>
                                                 <li>
-                                                        <a href="https://docker.lokyshin.net">
+                                                        <a href="https://docker.lokyshin.net" target="_blank">
                                                           <i class="fa-brands fa-docker"></i> 
                                                           &nbsp;&nbsp;Docker服务
                                                         </a>
                                                 </li>
                                                 <li>
-                                                        <a href="https://transfer.lokyshin.net">
+                                                        <a href="https://transfer.lokyshin.net" target="_blank">
                                                           <i class="fa-solid fa-download"></i> 
                                                           &nbsp;&nbsp;文件传递
                                                         </a>
                                                 </li>
                                                 <li>
-                                                        <a href="https://lkschatbot.lokyshin.net">
+                                                        <a href="https://lkschatbot.lokyshin.net" target="_blank">
                                                           <i class="fa-brands fa-weixin"></i> 
                                                           &nbsp;&nbsp;微信服务
                                                         </a>
                                                 </li>
                                                 <li>
-                                                        <a href="https://find.lokyshin.net">
+                                                        <a href="https://find.lokyshin.net" target="_blank">
                                                           <i class="fa-solid fa-network-wired"></i> 
                                                           &nbsp;&nbsp;网络接入
                                                         </a>
                                                 </li>
                                                 <li>
-                                                        <a href="https://socks.lokyshin.net">
+                                                        <a href="https://socks.lokyshin.net" target="_blank">
                                                           <i class="fa-solid fa-ethernet"></i> 
                                                           &nbsp;&nbsp;Socks服务
                                                         </a>
