--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                                     <div class="content">
                                         <ul style="list-style-type: none;">
                                                 <li>
-                                                        <a href="https://mail.lokyshin.net" target="_blank">
+                                                        <a href="mail.lokyshin.net" target="_blank">
                                                           <i class="fa-solid fa-inbox"></i> 
                                                           &nbsp;&nbsp;Lokyshin.net邮箱
                                                         </a>
