--- a/index.html
+++ b/index.html
@@ -59,15 +59,21 @@
                                                         </a>
                                                 </li>
                                                 <li>
+                                                        <a href="https://chat.lokyshin.net" target="_blank">
+                                                          <i class="fa-brands fa-rocketchat"></i> 
+                                                          &nbsp;&nbsp;ChatGPT by Lokyshin
+                                                        </a>
+                                                </li>
+                                                <li>
                                                         <a href="https://pdf.lokyshin.net" target="_blank">
                                                           <i class="fas fa-file-pdf"></i> 
                                                           &nbsp;&nbsp;Lokyshin's PDF
                                                         </a>
                                                 </li>
                                                 <li>
-                                                        <a href="https://chat.lokyshin.net" target="_blank">
-                                                          <i class="fa-brands fa-rocketchat"></i> 
-                                                          &nbsp;&nbsp;ChatGPT
+                                                        <a href="https://bitwarden.lokyshin.net" target="_blank">
+                                                          <i class="fa-solid fa-shield-halved"></i> 
+                                                          &nbsp;&nbsp;Bitwarden
                                                         </a>
                                                 </li>
                                         </ul>
