--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                                                 </li>
                                                 <li>
                                                         <a href="https://bitwarden.lokyshin.net" target="_blank">
-                                                          <i class="fa-solid fa-shield-halved"></i> 
+                                                          <i class="fa-solid fa-shield"></i> 
                                                           &nbsp;&nbsp;Bitwarden
                                                         </a>
                                                 </li>
