--- a/index.html
+++ b/index.html
@@ -53,14 +53,8 @@
                                     <div class="content">
                                         <ul style="list-style-type: none;">
                                                 <li>
-                                                        <a href="http://mail.lokyshin.net" target="_blank">
-                                                          <i class="fa-solid fa-inbox"></i> 
-                                                          &nbsp;&nbsp;Lokyshin.net邮箱
-                                                        </a>
-                                                </li>
-                                                <li>
                                                         <a href="https://chat.lokyshin.net" target="_blank">
-                                                          <i class="fa-brands fa-rocketchat"></i> 
+                                                          <i class="fa-solid fa-comments"></i> 
                                                           &nbsp;&nbsp;ChatGPT by Lokyshin
                                                         </a>
                                                 </li>
@@ -68,6 +62,12 @@
                                                         <a href="https://pdf.lokyshin.net" target="_blank">
                                                           <i class="fas fa-file-pdf"></i> 
                                                           &nbsp;&nbsp;Lokyshin's PDF
+                                                        </a>
+                                                </li>
+                                                <li>
+                                                        <a href="http://mail.lokyshin.net" target="_blank">
+                                                          <i class="fa-solid fa-inbox"></i> 
+                                                          &nbsp;&nbsp;Lokyshin.net邮箱
                                                         </a>
                                                 </li>
                                                 <li>
