--- a/index.html
+++ b/index.html
@@ -54,13 +54,13 @@
                                         <ul style="list-style-type: none;">
                                                 <li>
                                                         <a href="https://chat.lokyshin.net" target="_blank">
-                                                          <i class="fa-solid fa-comments"></i> 
+                                                          <i class="fa-solid fa-message"></i> 
                                                           &nbsp;&nbsp;ChatGPT by Lokyshin
                                                         </a>
                                                 </li>
                                                 <li>
                                                         <a href="https://pdf.lokyshin.net" target="_blank">
-                                                          <i class="fas fa-file-pdf"></i> 
+                                                          <i class="fa-solid fa-file-pdf"></i> 
                                                           &nbsp;&nbsp;Lokyshin's PDF
                                                         </a>
                                                 </li>
