--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                                                 </li>
                                                 <li>
                                                         <a href="https://pdf.lokyshin.net" target="_blank">
-                                                          <i class="fa-solid fa-file-pdf"></i> 
+                                                          <i class="fa-solid fa-file"></i> 
                                                           &nbsp;&nbsp;Lokyshin's PDF
                                                         </a>
                                                 </li>
