--- a/index.html
+++ b/index.html
@@ -53,15 +53,15 @@
                                     <div class="content">
                                         <ul style="list-style-type: none;">
                                                 <li>
-                                                        <a href="https://chat.lokyshin.net" target="_blank">
-                                                          <i class="fa-solid fa-message"></i> 
-                                                          &nbsp;&nbsp;ChatGPT by Lokyshin
+                                                        <a href="https://pdf.lokyshin.net" target="_blank">
+                                                          <i class="fa-solid fa-file-pdf"></i> 
+                                                          &nbsp;&nbsp;Lokyshin's PDF
                                                         </a>
                                                 </li>
                                                 <li>
-                                                        <a href="https://pdf.lokyshin.net" target="_blank">
-                                                          <i class="fa-solid fa-file"></i> 
-                                                          &nbsp;&nbsp;Lokyshin's PDF
+                                                        <a href="https://chat.lokyshin.net" target="_blank">
+                                                          <i class="fa-solid fa-message"></i> 
+                                                          &nbsp;&nbsp;ChatGPT by Lokyshin
                                                         </a>
                                                 </li>
                                                 <li>
