--- a/index.html
+++ b/index.html
@@ -59,6 +59,12 @@
                                                         </a>
                                                 </li>
                                                 <li>
+                                                        <a href="https://lobechat.lokyshin.net" target="_blank">
+                                                          <i class="fa-solid fa-comment"></i> 
+                                                          &nbsp;&nbsp;LobeChat by Lokyshin
+                                                        </a>
+                                                </li>
+                                                <li>
                                                         <a href="https://chat.lokyshin.net" target="_blank">
                                                           <i class="fa-solid fa-message"></i> 
                                                           &nbsp;&nbsp;ChatGPT by Lokyshin
