--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                                                 <li>
                                                         <a href="https://pysurtool.lokyshin.net" target="_blank">
                                                           <i class="fa-solid fa-chart-column"></i> 
-                                                          &nbsp;&nbsp;Python生存分析与统计工具
+                                                          &nbsp;&nbsp;Python生存分析统计工具
                                                         </a>
                                                 </li>
                                                 <li>
