--- a/index.html
+++ b/index.html
@@ -103,14 +103,14 @@
                                         <ul style="list-style-type: none;">
                                                 <li>
                                                         <a href="https://pysurtool.lokyshin.net" target="_blank">
-                                                          <i class="fa-solid fa-chart-column"></i> 
-                                                          &nbsp;&nbsp;Python生存分析统计工具
+                                                          <i class="fa-solid fa-chart-bar"></i>  
+                                                          &nbsp;&nbsp;PySurTool - Python统计分析工具
                                                         </a>
                                                 </li>
                                                 <li>
                                                         <a href="https://survcox.lokyshin.net" target="_blank">
-                                                          <i class="fa-solid fa-chart-gantt"></i> 
-                                                          &nbsp;&nbsp;R语言生存分析工具
+                                                          <i class="fa-solid fa-chart-line"></i> 
+                                                          &nbsp;&nbsp;SurvCox - R语言生存分析工具
                                                         </a>
                                                 </li>
                                                 <li>
