--- a/index.html
+++ b/index.html
@@ -70,14 +70,12 @@
                                                           &nbsp;&nbsp;ChatGPT by Lokyshin
                                                         </a>
                                                 </li>
-                                                <!--
                                                 <li>
-                                                        <a href="http://mail.lokyshin.net" target="_blank">
+                                                        <a href="https://work.exmail.qq.com" target="_blank">
                                                           <i class="fa-solid fa-inbox"></i> 
-                                                          &nbsp;&nbsp;Lokyshin.net邮箱
+                                                          &nbsp;&nbsp;我的邮箱
                                                         </a>
                                                 </li>
-                                                -->
                                                 <li>
                                                         <a href="https://bitwarden.lokyshin.net" target="_blank">
                                                           <i class="fa-solid fa-shield"></i> 
