--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                                                 <li>
                                                         <a href="https://work.exmail.qq.com" target="_blank">
                                                           <i class="fa-solid fa-inbox"></i> 
-                                                          &nbsp;&nbsp;我的邮箱
+                                                          &nbsp;&nbsp;Lokyshin's Email
                                                         </a>
                                                 </li>
                                                 <li>
