--- a/index.html
+++ b/index.html
@@ -59,6 +59,12 @@
                                                         </a>
                                                 </li>
                                                 <li>
+                                                        <a href="https://work.exmail.qq.com" target="_blank">
+                                                          <i class="fa-solid fa-inbox"></i> 
+                                                          &nbsp;&nbsp;Lokyshin's Email
+                                                        </a>
+                                                </li>
+                                                <li>
                                                         <a href="https://lobechat.lokyshin.net" target="_blank">
                                                           <i class="fa-solid fa-comment"></i> 
                                                           &nbsp;&nbsp;LobeChat by Lokyshin
@@ -66,14 +72,14 @@
                                                 </li>
                                                 <li>
                                                         <a href="https://chat.lokyshin.net" target="_blank">
-                                                          <i class="fa-solid fa-message"></i> 
+                                                          <i class="fa-solid fa-cloud-arrow-down"></i>
                                                           &nbsp;&nbsp;ChatGPT by Lokyshin
                                                         </a>
                                                 </li>
                                                 <li>
-                                                        <a href="https://work.exmail.qq.com" target="_blank">
+                                                        <a href="https://alltube.lokyshin.net" target="_blank">
                                                           <i class="fa-solid fa-inbox"></i> 
-                                                          &nbsp;&nbsp;Lokyshin's Email
+                                                          &nbsp;&nbsp;AllTubeDownload
                                                         </a>
                                                 </li>
                                                 <li>
