--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                                                 </li>
                                                 <li>
                                                         <a href="https://alltube.lokyshin.net" target="_blank">
-                                                          <i class="fa-solid fa-inbox"></i> 
+                                                          <i class="fa-solid fa-cloud-arrow-down"></i>
                                                           &nbsp;&nbsp;AllTubeDownload
                                                         </a>
                                                 </li>
