--- a/index.html
+++ b/index.html
@@ -72,14 +72,13 @@
                                                 </li>
                                                 <li>
                                                         <a href="https://chat.lokyshin.net" target="_blank">
-                                                          <i class="fa-solid fa-cloud-arrow-down"></i>
+                                                          <i class="fa-solid fa-message"></i> 
                                                           &nbsp;&nbsp;ChatGPT by Lokyshin
                                                         </a>
                                                 </li>
-                                                <li>
                                                         <a href="https://alltube.lokyshin.net" target="_blank">
-                                                          <i class="fa-solid fa-cloud-arrow-down"></i>
-                                                          &nbsp;&nbsp;AllTubeDownload
+                                                          <i class="fa-solid fa-circle-down"></i>
+                                                          &nbsp;&nbsp;AllTube Download
                                                         </a>
                                                 </li>
                                                 <li>
