--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                                                         </a>
                                                 </li>
                                                 <li>
-                                                        <a href="https://www.icloud.com/mail" target="_blank">
+                                                        <a href="https://www.icloud.com/mail/" target="_blank">
                                                           <i class="fa-solid fa-inbox"></i> 
                                                           &nbsp;&nbsp;Lokyshin's Email
                                                         </a>
